# AI-ATHENA-META

./: .gitignore  Dockerfile  README.md  SPACES_README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py  environment.py
sql-query-optimizer-env/: .gitignore  Dockerfile  README.md  README_HF_HEADER.md  baseline_inference.py  demo.py  openenv.yaml  requirements.txt  server.py  validate.py
sql-query-optimizer-env/env/: __init__.py  database.py  environment.py  models.py
sql-query-optimizer-env/env/tasks/: __init__.py  definitions.py
sql-query-optimizer-env/graders/: __init__.py
sql-query-optimizer-env/tests/: test_environment.py
tests/: test_environment.py
